# trano

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  makefile  mkdocs.yml  noxfile.py  pyproject.toml  readme.md
.github/: CODEOWNERS
.github/workflows/: docs.yaml  pipeline.yaml  publish.yaml  tests-runner.yaml
docs/: index.md
docs/getting-started/: installation.md
docs/reference/: components.md  parameters.md
docs/tutorials/: component_variants.md  first_model.md  index.md  model_with_another_library.md  multi-zone_with_hydronic_heating.md  multi-zone_with_ideal_heating.md  multizone_model.md  tutorial_1.md  tutorial_2.md  zone_with_photovoltaics.md  zone_with_ventilation.md
docs_src/: index.py  utils.py
docs_src/getting_started/: installation.py
docs_src/reference/: components.py  parameters.py
docs_src/tutorials/: tutorials.py
explanation/: index.html
getting-started/installation/: index.html
how-to guides/: index.html
neosim/: construction.py  glass.py  material.py  model.py  topology.py
neosim/controller/: ahu_controller.json  parser.py  vav_controller.json
neosim/documentation/: documentation.py  docx.py  html.py  json.py
neosim/models/: constants.py  parameters.py
neosim/plot/: plot.py
neosim/simulate/: simulate.py
neosim/templates/: base.jinja2  buildings.jinja2  common.jinja2  ideas.jinja2  macros.jinja2  space.mo
reference/components/: index.html
reference/parameters/: index.html
search/: search_index.json
tests/: ahu.yaml  conftest.py  golden.py  house.json  house.yaml  install_package.mos  model.mo  radiator.yaml  simplified_house.yaml  simulate.mos  single_zone_air_handling_unit.yaml  single_zone_air_handling_unit_simple_vav_control.yaml  single_zone_air_handling_unit_without_vav.yaml  single_zone_air_handling_unit_without_vav_duct_only.yaml  single_zone_air_handling_unit_without_vav_with_duct.yaml  single_zone_no_junction.yaml  test_bestest.py  test_bestest_harness.py  test_bestest_kpi.py  test_bestest_report.py  test_connect.py  test_controller_bus.py  test_core_utils.py  test_data_reader.py  test_documentation.py  test_dynamic_template.py  test_element.py  test_find_ports.py  test_library.py  test_network.py  test_parameters.py  test_parser.py  test_plot.py  test_reporting.py  test_schema.py  test_simulate.py  test_smoke_imports.py  test_template.py  test_validity.py  test_variants.py  (+2 more)
tests/constructions/: constructions.py
tests/data/: buildings_free_float_single_zone  buildings_free_float_single_zone.mo  buildings_free_float_single_zone_ahu_complex.mo  buildings_free_float_single_zone_with_data.mo  buildings_free_float_three_zones  buildings_free_float_three_zones.mo  buildings_free_float_two_zones  buildings_free_float_two_zones.mo  buildings_simple_hydronic  buildings_simple_hydronic.mo  buildings_simple_hydronic_three_zones.mo  buildings_simple_hydronic_two_zones  buildings_simple_hydronic_two_zones.mo  buildings_two_rooms_with_storage.mo  case600FF.mo  house.mo  house_complex.mo  house_complex_dedicated_pumps.mo  house_complex_heat_meter.mo  house_infiltration_air_water_heat_pump.mo  house_infiltration_air_water_heat_pump_ideas.mo  house_infiltration_boiler.mo  house_infiltration_boiler_ideas.mo  house_infiltration_ela.mo  house_model.mo  house_multiple_construction_one_azimuth_yaml.mo  house_yaml.mo  ideas_free_float_single_zone.mo  ideas_free_float_three_zones.mo  ideas_many_spaces_simple_ventilation.mo  ideas_simple_hydronic_no_occupancy.mo  ideas_simple_hydronic_three_zones.mo  ideas_space_1_simple_ventilation.mo  iso_13790_three_zones.mo  many_spaces_simple_ventilation.mo  many_spaces_simple_ventilation_with_validated_control.mo  multiple_internal_walls_buildings.mo  multiple_internal_walls_ideas.mo  multizone_air_handling_unit_space_connected.mo  multizone_air_handling_unit_space_connected_ideas.mo  (+33 more)
tests/fixtures/: house.py  libraries.py  network_builders.py  networks.py  paths.py  simple_space_1.py  simple_space_1_with_occupancy.py  spaces.py  spaces_with_different_construction_types.py  spaces_with_emissions.py  spaces_with_ventilation.py  three_spaces.py  two_spaces.py
tests/models/: ahu.yaml  boiler.yaml  hello_world_missing_space_parameters.yaml  house.yaml  house_complex.yaml  house_complex_dedicated_pumps.yaml  house_complex_heat_meter.yaml  house_infiltration_air_water_heat_pump.yaml  house_infiltration_boiler.yaml  house_infiltration_ela.yaml  house_multiple_construction_one_azimuth.yaml  multizone_air_handling_unit_space_connected.yaml  radiator.yaml  realistic.yaml  single_zone_air_handling_unit.yaml  single_zone_air_handling_unit_complex_vav.yaml  single_zone_air_handling_unit_complex_vav_containers.yaml  single_zone_air_handling_unit_without_vav_with_duct.yaml  single_zone_air_handling_unit_wrong_flow.yaml  single_zone_hydronic.yaml  single_zone_hydronic_emission_from_data.yaml  single_zone_hydronic_incomplete_system.yaml  single_zone_hydronic_occupancy_from_data.yaml  single_zone_hydronic_random_id.yaml  single_zone_hydronic_tilt_as_value.yaml  single_zone_hydronic_unidentified_paramer.yaml  single_zone_hydronic_unknown_id.yaml  single_zone_hydronic_unknown_system.yaml  single_zone_hydronic_unknown_variant.yaml  single_zone_hydronic_weather.yaml  single_zone_hydronic_wrong_flow.yaml  test.yaml  three_zones_hydronic_reduced_orders.yaml  three_zones_hydronic_reduced_orders_heat_pump.yaml  three_zones_hydronic_reduced_orders_pv.yaml
tests/resources/: multiple_internal_walls_buildings.building_res.mat  validation.csv
tests/tutorials/: first_model.yaml  multi_zones.yaml  multizones_with_pv.yaml  test_tutorials.py  three_zones_hydronic_heating.yaml  three_zones_ideal_heating.yaml  zone_with_ventilation.yaml
trano/: __init__.py  construction.py  exceptions.py  glass.py  main.py  material.py  topology.py
trano/cli/: __init__.py  app.py  parse.py  schema.py
trano/controller/: parser.py
trano/core/: __init__.py  topology.py  utils.py
trano/data/: include.py
trano/data_models/: __init__.py  conversion.py  (+4 more)
tutorials/: first_model.md
validation/: __init__.py
(+261 files in other folders)
