[tool.poetry]
name = "neosim"
version = "0.1.0"
description = ""
authors = ["aan <andoludovic.andriamamonjy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ifcopenshell = "^0.7.0.231018"
anytree = "^2.12.1"
lxml = "^4.9.3"
pydantic = "^2.5.1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
uuid = "^1.30"
docker = "^6.1.3"
jinja2 = "^3.1.2"
pytest = "^7.4.3"
pyvis = "^0.3.2"
scipy = "^1.13.1"
mat4py = "^0.6.0"
pandas = "^2.2.2"
buildingspy = "^5.1.0"
json2html = "^1.3.0"
yattag = "^1.15.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.8.0"
nox = "^2023.4.22"
ruff = "^0.3.0"
pre-commit = "^3.6.2"
pandas-stubs = "^2.2.0.240218"
types-simplejson = "^3.19.0.20240218"
types-beautifulsoup4 = "^4.12.0.20240229"
pytest-mongo = "^3.1.0"
networkx-stubs = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = "pydantic.mypy"
packages= "neosim"

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_absolute_path = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true
strict = true

exclude = [
    "test_*",
    "conftest.py",
]

[tool.ruff]
line-length = 96
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "test_*",
    "conftest.py"
]


[tool.ruff.lint]
select = ["E", "W", "F", "B006","RUF","UP","SIM","FURB","PIE","PERF","C4","B","PL","S","C901","N","ANN", "ERA001", "PD"]
ignore = []
extend-ignore = ["ANN101","ANN102"]

fixable = ["ALL"]
unfixable = []
