[project]
name = "trano"
version = "0.15.0"
description = ""
authors = [{ name = "Ando Andriamamonjy", email = "andoludovic.andriamamonjy@gmail.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
keywords = [
    "energy simulation",
    "modelica",
    "interoperability",
    "building energy simulation",
    "buildings",
    "ideas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.8.0",
    "networkx>=3.2.1,<4",
    "uuid>=1.30,<2",
    "docker>=7.0.0,<8",
    "jinja2>=3.1.2,<4",
    "pandas>=2.2.2,<3",
    "buildingspy>=5.1.0,<6",
    "plotly>=5.22.0,<6",
    "python-docx>=1.1.2,<2",
    "linkml>=1.8.1,<2",
    "pyyaml-include>=2.1,<3",
    "typer>=0.19.2,<0.20",
    "pydot>=3.0.4,<4",
    "yattag>=1.16.1,<2",
]

[project.urls]
Homepage = "https://andoludo.github.io/trano/"
Repository = "https://github.com/andoludo/trano"

[project.scripts]
trano = "trano.main:app"

[dependency-groups]
dev = [
    "mypy>=1.8.0,<2",
    "ruff>=0.3.0,<0.4",
    "pre-commit>=3.6.2,<4",
    "pandas-stubs>=2.2.0.240218,<3",
    "types-simplejson>=3.19.0.20240218,<4",
    "types-beautifulsoup4>=4.12.0.20240229,<5",
    "pytest-mongo>=3.1.0,<4",
    "networkx-stubs>=0.0.1,<0.0.2",
    "pytest-ordering>=0.6,<0.7",
    "types-pyyaml>=6.0.12.20240808,<7",
    "isort>=5.13.2,<6",
    "jsf>=0.11.2,<0.12",
    "black>=24.10.0,<25",
    "pytest>=7.4.3,<8",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.5.42,<10",
    "mkdocstrings>=0.26.2,<0.27",
    "mkdocstrings-python>=1.12.2,<2",
    "markdown-include>=0.8.1,<0.9",
    "mkdocs-gen-files>=0.5.0,<0.6",
    "openai>=1.52.2,<2",
    "python-dotenv>=1.0.1,<2",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""
source-include = ["LICENSE"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"


[tool.mypy]
plugins = "pydantic.mypy"
packages= "trano"

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_absolute_path = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true
strict = true

exclude = [
    "test_*",
    "conftest.py",
]

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.isort]
skip = ["models"]

[tool.ruff.lint]
select = ["E", "W", "F", "B006","RUF","UP","SIM","FURB","PIE","PERF","C4","B","PL","S","C901","N","ANN", "ERA001", "PD"]
ignore = ["UP006", "UP035"]
extend-ignore = ["ANN101","ANN102","S101","PLR2004","W291"]

fixable = ["ALL"]
unfixable = []
